# UTRA_ART

./: README.md
Arduino/sketches/PID/: PID.ino
Arduino/sketches/encoders/encoder1/: encoder1.ino
Arduino/sketches/motorcontrol/motorcontrol/: motorcontrol.ino
UTRA_ws/: measurements.txt  weights.txt
UTRA_ws/devel/: .catkin  .rosinstall  setup.sh
UTRA_ws/devel/include/amcl/: AMCLConfig.h
UTRA_ws/devel/include/base_local_planner/: Position2DInt.h
UTRA_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
UTRA_ws/devel/include/global_planner/: GlobalPlannerConfig.h
UTRA_ws/devel/include/map_msgs/: GetMapROIRequest.h  GetMapROIResponse.h  GetPointMapROIRequest.h  GetPointMapROIResponse.h  GetPointMapRequest.h  GetPointMapResponse.h  OccupancyGridUpdate.h  PointCloud2Update.h  ProjectedMap.h  ProjectedMapInfo.h  ProjectedMapsInfoRequest.h  ProjectedMapsInfoResponse.h  SaveMapRequest.h  SaveMapResponse.h  SetMapProjectionsRequest.h  SetMapProjectionsResponse.h
UTRA_ws/devel/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h
UTRA_ws/devel/include/pid/: PidConfig.h
UTRA_ws/devel/include/urg_node/: Status.h
UTRA_ws/devel/lib/amcl/: amcl
UTRA_ws/devel/lib/base_local_planner/: point_grid
UTRA_ws/src/control/src/cmdvel/: CMakeLists.txt  package.xml
UTRA_ws/src/control/src/cmdvel/src/: cmdvel.cpp  velmapper.cpp  velmappercoupled.cpp
UTRA_ws/src/sensors/src/sensors/: package.xml
(+150 files in other folders)
